change stars to real icons from fontawesome

--- a/detailes.html
+++ b/detailes.html
@@ -130,8 +130,10 @@
                             <span class="text-lg text-gray-500 line-through">$109</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
-                            <span class="ml-1 text-sm text-gray-600">5.0</span>
+                            <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i>
+                           
+                           <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
                      
@@ -156,7 +158,8 @@
                             <span class="text-lg text-gray-500 line-through">$1300</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
+                            <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                             <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
@@ -182,7 +185,8 @@
                             <span class="text-lg text-gray-500 line-through">$22</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
+                            <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                             <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
@@ -208,7 +212,8 @@
                             <span class="text-lg text-gray-500 line-through">$220</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
+                            <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                             <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
