--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                             <span class="text-lg text-gray-500 line-through">$120</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
+                            <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                             <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
@@ -136,7 +137,8 @@
                             <span class="text-lg text-gray-500 line-through">$1300</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
+                            <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                             <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
@@ -162,7 +164,8 @@
                             <span class="text-lg text-gray-500 line-through">$22</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
+                            <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                             <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
@@ -188,7 +191,8 @@
                             <span class="text-lg text-gray-500 line-through">$180</span>
                           </div>
                           <div class="flex items-center">
-                            <span class="text-orange-500">★★★★★</span>
+                            <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                             <span class="ml-1 text-sm text-gray-600">5.0</span>
                           </div>
                         </div>
