--- a/backup.html
+++ b/backup.html
@@ -16,7 +16,8 @@
                 <span class="text-lg text-gray-500 line-through">$109</span>
               </div>
               <div class="flex items-center">
-                <span class="text-orange-500">★★★★★</span>
+                <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                 <span class="ml-1 text-sm text-gray-600">5.0</span>
               </div>
             </div>
@@ -42,7 +43,8 @@
                 <span class="text-lg text-gray-500 line-through">$1300</span>
               </div>
               <div class="flex items-center">
-                <span class="text-orange-500">★★★★★</span>
+                <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                 <span class="ml-1 text-sm text-gray-600">5.0</span>
               </div>
             </div>
@@ -68,7 +70,8 @@
                 <span class="text-lg text-gray-500 line-through">$22</span>
               </div>
               <div class="flex items-center">
-                <span class="text-orange-500">★★★★★</span>
+                <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                 <span class="ml-1 text-sm text-gray-600">5.0</span>
               </div>
             </div>
@@ -94,7 +97,8 @@
                 <span class="text-lg text-gray-500 line-through">$220</span>
               </div>
               <div class="flex items-center">
-                <span class="text-orange-500">★★★★★</span>
+                <span class="text-orange-500">    <i class="fa fa-star text-orange-500"></i>
+                            <i class="fa fa-star text-orange-500"></i> </span>
                 <span class="ml-1 text-sm text-gray-600">5.0</span>
               </div>
             </div>
