--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-5"> 
                 <div class="shadow-sm bg-white rounded-lg hover:shadow-md hover:shadow-blue-900">
                     <div class="flex justify-center">
-                        <img src="images/cl1.png" alt="" class="w-44 h-44">
+                        <a href="detailes.html"  > <img src="images/cl1.png" alt="" class="w-44 h-44"></a>
                     </div>
                     <div class="px-5 py-3">
                     <div class="flex items-center justify-between ">
@@ -122,11 +122,11 @@
 
                 <div class="shadow-sm bg-white rounded-lg hover:shadow-md hover:shadow-blue-900">
                     <div class="flex justify-center py-1">
-                        <img src="images/pia1.png" alt="" class="w-44 h-44">
+                        <a href="detailes.html"  ><img src="images/pia1.png" alt="" class="w-44 h-44"></a>
                     </div>
                     <div class="px-5 py-3">
                     <div class="flex items-center justify-between ">
-                        <h3 class="text-lg font-semibold ">Piano 2700</h3>
+                        <a href="detailes.html"  ><h3 class="text-lg font-semibold ">Piano 2700</h3></a>
                         <button class="bg-gray-100 h-9 w-9 rounded-full flex justify-center items-center">
                             <i class="fa fa-cart-plus text-xl "></i>
                         </button>
@@ -149,11 +149,11 @@
 
                 <div class="shadow-sm bg-white rounded-lg hover:shadow-md hover:shadow-blue-900">
                     <div class="flex justify-center py-1">
-                        <img src="images/sh1.png" alt="" class="w-44 h-44">
+                        <a href="detailes.html"  ><img src="images/sh1.png" alt="" class="w-44 h-44"></a>
                     </div>
                     <div class="px-5 py-3">
                     <div class="flex items-center justify-between ">
-                        <h3 class="text-lg font-semibold ">Sport Shoes</h3>
+                        <a href="detailes.html"  ><h3 class="text-lg font-semibold ">Sport Shoes</h3></a>
                         <button class="bg-gray-100 h-9 w-9 rounded-full flex justify-center items-center">
                             <i class="fa fa-cart-plus text-xl "></i>
                         </button>
@@ -176,7 +176,7 @@
 
                 <div class="shadow-sm bg-white rounded-lg hover:shadow-md hover:shadow-blue-900">
                     <div class="flex justify-center py-1">
-                        <img src="images/tv2.png" alt="" class="w-44 h-44">
+                        <a href="detailes.html"  ><img src="images/tv2.png" alt="" class="w-44 h-44"></a>
                     </div>
                     <div class="px-5 py-3">
                     <div class="flex items-center justify-between ">
